// {C} Copyright 2017 Pensando Systems Inc. All rights reserved.

syntax = "proto3";
// Service name
package bookstore;

// Mandatory imports.
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/pensando/sw/api/meta.proto";


message StoreSpec {
  string Contact = 1;
}

message StoreStatus {
  repeated string CurrentOutages = 1;
}

message Store {
  api.TypeMeta T = 1  [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",inline"];
  api.ObjectMeta O = 2  [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = "meta,inline"];

  option (venice.objectPrefix) = {Singleton: "store"};

  StoreSpec Spec = 3 [(gogoproto.nullable) = false];
  StoreStatus Status = 4 [(gogoproto.nullable) = false];
}

message Publisher {
  api.TypeMeta T = 1  [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",inline"];
  api.ObjectMeta O = 2  [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = "meta,inline"];

  // Option to define writing to KV store and the prefix for the object. The option could also be
  // specified with dynamic parameters in {..} (for example tenant, namespace etc.) as needed.
  option (venice.objectPrefix) = {Collection: "publishers"};

  PublisherSpec Spec = 3 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "spec"] ;
  PublisherStatus Status = 4 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "status"];
}

message PublisherSpec {
    // cli-tags: id=pubid verobose-only=true
    // cli-help: This is the publisherID
    string Id  = 2[(gogoproto.jsontag) = "id", (venice.check) = "RegExp(alphanum)"];
    // cli-tags: ins=pub
    // cli-help: This is the publisher address
    string Address = 3 [(gogoproto.jsontag) = "address"];
    string WebAddr = 4 [(venice.check) = "URI()", (venice.check) = "StrLen(6,256)"];
}

message PublisherStatus {
  string Status = 1 [(gogoproto.jsontag) = "status"];
}

message Book {
  api.TypeMeta T = 1  [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",inline"];
  api.ObjectMeta O = 2  [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = "meta,inline"];

  option (venice.objectPrefix) = {Collection: "books"};

  BookSpec Spec = 3 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "spec"];
  BookStatus Status = 4 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "status"];
}

message BookSpec {
  enum  BookCategories{
    // ui-hint: Childrens Literature
    ChildrensLit = 0 [(venice.enumValueStr) = "childrens-lit"];
    // ui-hint: Young Adult
    YoungAdult = 1 [(venice.enumValueStr) = "young-adult"];
    Fiction = 2 [(venice.enumValueStr) = "fiction"];
    // ui-hint: Non Fiction
    NonFiction = 3 [(venice.enumValueStr) = "non-fiction"];
  }
  string ISBNId = 2;
  string Author = 3 [(gogoproto.jsontag) = "author"];
  // Added in  version 2 of the API.
  string IdProvider = 4[(venice.default) = "v1:TestProvider"];
  string Category = 5 [(gogoproto.jsontag) = "category", (venice.check) = "StrEnum(BookSpec.BookCategories)", (venice.default) = "v1:childrens-lit", (venice.default) = "young-adult"];
  // Used for performance monitoring tests
  api.Timestamp UpdateTimestamp = 6;
  bool Terminate = 7;
  string Publisher = 9 [(venice.objRelation) = {Type: "NamedRef", To: "bookstore/Publisher"}];
  map<string, BookEdition> Editions = 8 [(gogoproto.nullable) = true, (gogoproto.jsontag) = "editions"];
}

message BookEdition {
  string Errata = 1[(venice.default) = "None", (gogoproto.jsontag) = "errata"];
  string Year = 2 [(gogoproto.jsontag) = "year", (venice.check) = "StrLen(4,4)"];
  map<string, BookReview> Reviews = 3[(gogoproto.jsontag) = "reviews"];
}

message BookReview {
    api.Timestamp Date = 1 [(gogoproto.jsontag) = "date"];
    string Review = 2 [(gogoproto.jsontag) = "review"];
}

message BookStatus {
    int32 Inventory = 1;
}

message Order {
  api.TypeMeta T = 1  [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",inline"];
  api.ObjectMeta O = 2  [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = "meta,inline"];

  option (venice.objectPrefix) = {Collection: "orders"};

  // Spec is not allowed to be Null hence disabling nullable.
  OrderSpec Spec = 3 [(gogoproto.nullable) = false];
  OrderStatus Status = 4 [(gogoproto.nullable) = false];
}

message OrderSpec {
  string Id = 1 [(venice.default) = "unknown order", (gogoproto.jsontag) = ",omitempty"];
  repeated OrderItem Order = 2;
}

message OrderItem {
  string ISBNId = 1 [(venice.check) = "StrLen(3,10)"];
  string Book = 2 [(venice.objRelation) = {Type: "WeakRef", To: "bookstore/Book"}, (gogoproto.jsontag) = "books"];
  uint32 Quantity = 3 [(venice.check) = "IntRange(1,30)"];
}

message OrderStatus {
  enum OrderStatus {
    CREATED = 0; // ui-hint: Created
    PROCESSING = 1; // ui-hint: Processing
    FILLED = 2; // ui-hint: Filled
    SHIPPED = 3; // ui-hint: Shipped
    COMPLETED = 4; // ui-hint: Completed
    DISCOUNTED = 5; // ui-hint: Discounted
  }
  string Status = 3 [(venice.check) = "StrEnum(OrderStatus.OrderStatus)"];
  repeated OrderItem Filled = 4;
  string Message = 5;
}

message CouponSpec {
  string DiscountCode = 1;
}
message Coupon {
  api.TypeMeta T = 1  [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",inline"];
  api.ObjectMeta O = 2  [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = "meta,inline"];
  option (venice.objectPrefix) = {Collection: "Coupon"};
  CouponSpec Spec = 3 [(gogoproto.nullable) = false];
  CouponStatus Status = 4 [(gogoproto.nullable) = false];
}

message CouponStatus {
     int32 Inventory = 1;
 }

message CustomerPersonalInfo {
  string SSN = 1 [(venice.storageTransformer) = "Secret()", (venice.storageTransformer) = "Secret()", // super secret encrypted twice!
                  (gogoproto.jsontag) = "ssn,omitempty"];
  string MotherMaidenName = 2 [(venice.storageTransformer) = "Secret()", (gogoproto.jsontag) = "mother-maiden-name,omitempty"];
	string DateOfBirth = 3 [(venice.mutable) = false, (gogoproto.jsontag) = "date-of-birth"];
	repeated uint32 LuckyNumbers = 4 [(venice.mutable) = false, (gogoproto.jsontag) = "lucky-numbers"];
}

message CustomerSpec {
  string Address = 1;
  repeated string CreditCardNumbers = 2 [(venice.storageTransformer) = "Secret()", (venice.check) = "StrLen(3,16)"];
  bytes Password = 3 [(venice.storageTransformer) = "Secret()"];
  CustomerPersonalInfo PasswordRecoveryInfo = 4 [(gogoproto.nullable) = false];
	string Id = 5 [(venice.mutable) = false, (gogoproto.jsontag) = "id"];
}

message CustomerStatus {
  string AccountStatus = 1  [(gogoproto.jsontag) = "account-status"];
  string Interests = 2 [(venice.objRelation) = {Type: "SelectorRef", To: "bookstore/Book"}, (gogoproto.jsontag) = "interests"];
}

message Customer {
  api.TypeMeta T = 1  [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",inline"];
  api.ObjectMeta O = 2  [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = "meta,inline"];

  option (venice.objectPrefix) = {Collection: "customers"};

  CustomerSpec Spec = 3 [(gogoproto.nullable) = false];
  CustomerStatus Status = 4 [(gogoproto.nullable) = false];
}

message ApplyDiscountReq {
  api.TypeMeta T = 1  [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",inline"];
  api.ObjectMeta O = 2  [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = "meta,inline"];
  option (venice.objectPrefix) = {Collection: "orders"};
  string Coupon = 3;
}

message OutageRequest {
  api.TypeMeta T = 1  [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",inline"];
  api.ObjectMeta O = 2  [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = "meta,inline"];
  option (venice.objectPrefix) = {Collection: "Store"};
  string Reason = 3;
}

message RestockRequest {
  api.TypeMeta T = 1  [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",inline"];
  api.ObjectMeta O = 2  [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = "meta,inline"];
  option (venice.objectPrefix) = {Collection: "Book"};
  string Reason = 3;
}

message RestockResponse {
  api.TypeMeta T = 1  [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",inline"];
  api.ObjectMeta O = 2  [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = "meta,inline"];
  option (venice.objectPrefix) = {Collection: "Book"};
  repeated string Books = 3;
  int32 Count = 4;
}

// This is an unused messaged not used by any service but is force documented in the swagger spec
message UnusedMessage {
  option (venice.forceDoc) = true;

  string Unused = 1;
}

service BookstoreV1 {
  // ---- Service level parameters ----//
  // Prefix for all resources served by this service.
  option (venice.apiPrefix) = "bookstore";
  // API Version.
  option (venice.apiVersion) = "v1";
  // The apiCrudService Option generates CRUD + List, Watch APIs for the specified message.
  // The Order Object is for orders to the bookstore
  option (venice.apiGrpcCrudService) = "Order";
  option (venice.apiGrpcCrudService) = "Book";
  option (venice.apiGrpcCrudService) = "Publisher";
  option (venice.apiGrpcCrudService) = "Store";
  option (venice.apiGrpcCrudService) = "Coupon";
  option (venice.apiGrpcCrudService) = "Customer";

  // REST resources exposed by the service. The Option specifies
  //   Object  - The resource
  //   Method  - REST methods allowed on the resource
  //   Pattern - Pattern for the URI
  option (venice.apiRestService) = {
        Object: "Book"
        Method: [ "get", "put", "list" ]
     };

  option (venice.apiRestService) = {
        Object: "Order"
        Method: [ "put", "get", "delete", "post", "list", "watch" ]
     };

  option (venice.apiRestService) = {
        Object: "Store"
        Method: [ "put", "get", "post", "delete" ]
     };

  option (venice.apiRestService) = {
        Object: "Customer"
        Method: [ "put", "get", "delete", "post", "list" ]
     };

  // Action on a Object
  option (venice.apiAction) = {
      Object: "Order"
      Action: "applydiscount"
      Request: "ApplyDiscountReq"
      Response: "Order"
     };
  // Multiple actions on the same object
  option (venice.apiAction) = {
      Object: "Order"
      Action: "cleardiscount"
      Request: "ApplyDiscountReq"
      Response: "Order"
     };
  // Action on a Singleton
  option (venice.apiAction) = {
     Object: "Store"
     Action: "AddOutage"
     Request: "OutageRequest"
     Response: "Store"
    };
  // Action on a collection
  option (venice.apiAction) = {
       Collection: "Book"
       Action: "Restock"
       Request: "RestockRequest"
       Response: "RestockResponse"
    };
  // Reverse Proxy Path
  option (venice.proxyPrefix) = {
      Path: "/uploads/"
      PathPrefix: "apis/"
      Backend: "http://localhost:9918"
      Response: "Store"
  };
}
